--- a/paginas/cadastro2.html
+++ b/paginas/cadastro2.html
@@ -34,7 +34,7 @@
 
 <input type="number" id="peso" placeholder="Peso (kg)" required onkeydown="if (event.key === '-' || event.key === 'e' || event.key === 'E') event.preventDefault();">
 
-<input type="number" id="idade" placeholder="Idade" required onkeydown="if (event.key === '-' || event.key === 'e' || event.key === 'E') event.preventDefault();">
+<input type="date" id="dataNascimento" required>
 
         <select id="objetivo" required>
           <option value="" disabled selected>Selecione um objetivo</option>
