--- a/paginas/recuperarConta.html
+++ b/paginas/recuperarConta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recuperar Conta</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/recuperarConta.css">
 </head>
 <body>
   <div class="recuperar-container">
