--- a/paginas/home.html
+++ b/paginas/home.html
@@ -37,7 +37,8 @@
     <section class="progresso">
       <h2>Seu progresso</h2>
       <div class="progress-card">
-        <p>estamos trabalhando nisso... </p>
+         <button  class="button" onclick="window.location.href='progresso.html'">Ver Progresso</button><br>
+         
         <div class="progress-bar">
           <div id="progressFill" style="width: 0%;"></div>
         </div>
